# dart-playground

./: .gitignore  README.md  ffigen-config.yaml  generated_bindings.dart  make-lib.ps1  make-lib.sh  playground.dart  pubspec.yaml  run-dart.sh  run-ffigen.bat
app-core/: CMakeLists.txt  app-core.cpp  app-core.hpp
app-core/api/: app-core-api.cpp  app-core-api.h  macros.h  signal.h  types.h
